# TCB-vector-image-authoring

./: CMakeLists.txt
src/3dparty/ANN/: ANN.lib  ANNd.lib
src/3dparty/OpenMesh/: OpenMeshCore.lib  OpenMeshCored.lib  OpenMeshTools.lib  OpenMeshToolsd.lib
src/3dparty/QGLViewer/: QGLViewer2.lib  QGLViewerd2.lib
src/3dparty/mat_dep_fitcolor/: readme.txt  sparse_quad_prog_color.cpp  sparse_quad_prog_color.def  sparse_quad_prog_color.exp  sparse_quad_prog_color.exports  sparse_quad_prog_color.h  sparse_quad_prog_color.lib  sparse_quad_prog_color.m
src/3dparty/mat_dep_fitcolor/v2/generic_interface/: readme.txt  sparse_quad_prog_color.ctf
src/3dparty/mat_dep_quadprog/: readme.txt  sparse_quad_prog.cpp  sparse_quad_prog.def  sparse_quad_prog.exp  sparse_quad_prog.exports  sparse_quad_prog.h  sparse_quad_prog.lib  sparse_quad_prog.m  sparse_quad_prog_old.m
src/3dparty/mat_dep_quadprog/v2/generic_interface/: readme.txt  sparse_quad_prog.ctf
src/EditGui/: CMakeLists.txt
src/EditGui/include/: action.cpp  action.h  action_definition.cpp  action_definition.h  action_definition_item.cpp  action_definition_item.h  action_list.cpp  action_list.h  basicViewer.cpp  basicViewer.h  draw_aux.cpp  draw_aux.h  editing.cpp  editing.h  main.cpp  mainwindow.cpp  mainwindow.h  operation_window.cpp  operation_window.h  reference_window.cpp  reference_window.h  resource.aps  resource.rc  vecImage_window.cpp  vecImage_window.h  viewer.cpp  viewer.h
src/ImageApproxi/: CMakeLists.txt
src/ImageApproxi/include/Assistant/: ColorRamp.cpp  ColorRamp.h  data_types.h  enriched_polyhedron.h  fairing.cpp  fairing.h  geometric_predicates.h  gl2ps.c  gl2ps.h  mean_value_coord.cpp  mean_value_coord.h  parser.h  predicates.cpp  triangle_dunavant_rule.cpp
src/ImageApproxi/include/Corefuncs/: ImageApproximation.h  ImageApproximationConnecter.cpp  ImageApproximationProcess.cpp  ImageApproximationTest.cpp  auxfunc.cpp  auxfunc.h  basis_computation.cpp  basis_computation.h  constrained_parameterization.cpp  constrained_parameterization.h  fitting.cpp  fitting.h  knotstriangulation.cpp  knotstriangulation.h  sample_drawfunc.cpp  sample_drawfunc.h  simplex_spline.cpp  simplex_spline.h
src/ImageApproxi/include/ImageFeatureEdge/: ED.cpp
src/ImageApproxi/include/OptimizeKnotTri/: image_domain.cpp  image_domain.h  image_pixelset.h  image_polynomial.h  image_rasterizer.h  openmesh_trimesh.cpp  openmesh_trimesh.h  timer.h  vmg_scene.cpp  vmg_scene.h
src/Subdivision/: CMakeLists.txt
src/Subdivision/include/: SubApproximation.cpp  SubApproximation.h  fitting_color.cpp  fitting_color.h  loop.cpp  loop.h  mesh.cpp  mesh.h  objparse.cpp  objparse.h  simplify.cpp  simplify.h
